--- a/DotaMatch/app/src/main/res/layout/activity_preference.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_preference.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_profile"
+    android:id="@+id/activity_preference"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.dotamatch.designproject.dotamatch.ProfileActivity">
+    tools:context="com.dotamatch.designproject.dotamatch.PreferenceActivity">
 
     <LinearLayout
         android:orientation="vertical"
@@ -18,27 +18,39 @@
         android:layout_centerHorizontal="true"
         android:weightSum="1">
 
+        <EditText
+            android:id="@+id/editTextDotaName"
+            android:hint="Enter your Dota Name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Rating"
             android:id="@+id/textViewUserEmail"
             android:layout_gravity="center_horizontal"/>
 
-        <Button
+        <RatingBar
+            android:id="@+id/ratingBarRating"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Preference"
-            android:id="@+id/buttonPreference"
             android:layout_gravity="center_horizontal"/>
 
         <Button
+        android:id="@+id/buttonSave"
+        android:text="Save Information"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/buttonBack"
+            android:text="Back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Log Out"
-            android:id="@+id/buttonLogOut"
-            android:layout_gravity="center_horizontal" />
+            android:layout_gravity="center_horizontal"/>
 
     </LinearLayout>
+
 </RelativeLayout>
