--- a/DotaMatch/app/src/main/res/layout/activity_main.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="User Registration"
+            android:text="Registration"
             android:id="@+id/textView"
             android:layout_gravity="center_horizontal"
             android:textColor="@color/text" />
