--- a/DotaMatch/app/src/main/res/layout/activity_preference.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_preference.xml
@@ -31,21 +31,24 @@
             android:hint="Enter your Dota Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center" />
 
         <EditText
         android:id="@+id/editTextMMR"
         android:hint="Enter your MMR"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"/>
+        android:layout_gravity="center_horizontal"
+            android:textAlignment="center" />
 
         <EditText
             android:id="@+id/editTextRole"
             android:hint="Enter your Role"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_gravity="center_horizontal"
+            android:textAlignment="center" />
 
         <TextView
             android:layout_width="wrap_content"
