--- a/DotaMatch/app/src/main/res/layout/activity_party.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_party.xml
@@ -10,30 +10,46 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.dotamatch.designproject.dotamatch.PartyActivity">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/textViewUser1"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:layout_alignParentStart="true" />
+
+    <RatingBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:id="@+id/ratingBarUser1"
+        android:layout_below="@+id/textViewUser1"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="Save Rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/buttonSaveRating"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:backgroundTint="@color/colorPrimary"/>
+
     <Button
         android:text="Start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/buttonStart"
+        android:backgroundTint="@color/colorPrimary"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/colorPrimary"/>
+        android:layout_toEndOf="@+id/buttonSearch" />
 
-    <ScrollView
+    <Button
+        android:text="Search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scrollViewUsers"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_above="@+id/buttonStart"
-        android:layout_alignParentEnd="true">
+        android:id="@+id/buttonSearch"
+        android:backgroundTint="@color/colorPrimary"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/buttonSaveRating" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:padding="15dp"
-            android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:id="@+id/textViewUser" />
-    </ScrollView>
 </RelativeLayout>
