--- a/DotaMatch/app/src/main/res/layout/activity_preference.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_preference.xml
@@ -66,7 +66,14 @@
 
         <Button
             android:id="@+id/buttonSave"
-            android:text="Save Information"
+            android:text="Save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorPrimary" />
+
+        <Button
+            android:id="@+id/buttonUpdate"
+            android:text="Update"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/colorPrimary" />
