--- a/DotaMatch/app/src/main/res/layout/activity_preference.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_preference.xml
@@ -42,13 +42,30 @@
         android:layout_gravity="center_horizontal"
             android:textAlignment="center" />
 
-        <EditText
-            android:id="@+id/editTextRole"
-            android:hint="Enter your Role"
+        <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:textAlignment="center" />
+            android:layout_centerVertical="true"
+            android:layout_centerHorizontal="true">
+
+            <TextView
+                android:text="@string/select_role"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textViewRole"
+                android:layout_weight="1"
+                android:textSize="18sp" />
+
+            <Spinner
+                android:id="@+id/roleSpinner"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_toRightOf="@+id/textViewRole"
+                ></Spinner>
+
+        </LinearLayout>
 
         <TextView
             android:layout_width="wrap_content"
