--- a/DotaMatch/app/src/main/res/layout/activity_login.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_login.xml
@@ -52,8 +52,9 @@
         <Button
             android:id="@+id/buttonEnter"
             android:text=" Enter"
-            android:layout_width="match_parent"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:backgroundTint="@color/colorPrimary"
             android:textColor="@color/text" />
 
