--- a/DotaMatch/app/src/main/res/layout/activity_preference.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_preference.xml
@@ -33,7 +33,7 @@
         <EditText
             android:id="@+id/editTextDotaName"
             android:hint="Enter your Dota Name"
-            android:layout_width="wrap_content"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:textAlignment="center" />
@@ -45,7 +45,7 @@
         <EditText
         android:id="@+id/editTextMMR"
         android:hint="Enter your MMR"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
             android:textAlignment="center" />
@@ -71,17 +71,19 @@
 
             <Spinner
                 android:id="@+id/roleSpinner"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
+                android:layout_width="150dp"
+                android:layout_height="25dp"
                 android:layout_alignParentRight="true"
                 android:layout_toRightOf="@+id/textViewRole"
+                android:backgroundTint="@color/colorPrimary"
+                android:textAlignment="center"
                 ></Spinner>
 
         </LinearLayout>
 
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="10dp" />
+            android:layout_height="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -102,18 +104,17 @@
             android:layout_gravity="center_horizontal"
             android:isIndicator="true"/>
 
-        <Button
-            android:id="@+id/buttonSave"
-            android:text="Save"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/colorPrimary" />
+        <Space
+            android:layout_width="wrap_content"
+            android:layout_height="150dp" />
 
         <Button
             android:id="@+id/buttonUpdate"
             android:text="Update"
-            android:layout_width="match_parent"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textColor="@color/text"
             android:backgroundTint="@color/colorPrimary" />
 
     </LinearLayout>
