--- a/DotaMatch/app/src/main/res/layout/activity_profile.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_profile.xml
@@ -26,36 +26,56 @@
             android:id="@+id/textViewUserEmail"
             android:layout_gravity="center_horizontal" />
 
-        <Button
+        <Space
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="40dp" />
+
+        <Button
+            android:layout_width="125dp"
+            android:layout_height="50dp"
             android:text="Play"
             android:id="@+id/buttonPlay"
             android:layout_gravity="center_horizontal"
+            android:textColor="@color/text"
             android:backgroundTint="@color/colorPrimary" />
 
-        <Button
+        <Space
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="5dp" />
+
+        <Button
+            android:layout_width="125dp"
+            android:layout_height="50dp"
             android:text="Message"
             android:id="@+id/buttonMessage"
             android:layout_gravity="center_horizontal"
+            android:textColor="@color/text"
             android:backgroundTint="@color/colorPrimary" />
 
-        <Button
+        <Space
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="5dp" />
+
+        <Button
+            android:layout_width="125dp"
+            android:layout_height="50dp"
             android:text="Preference"
             android:id="@+id/buttonPreference"
             android:layout_gravity="center_horizontal"
+            android:textColor="@color/text"
             android:backgroundTint="@color/colorPrimary" />
 
-        <Button
+        <Space
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="5dp" />
+
+        <Button
+            android:layout_width="125dp"
+            android:layout_height="50dp"
             android:text="Log Out"
             android:id="@+id/buttonLogOut"
             android:layout_gravity="center_horizontal"
+            android:textColor="@color/text"
             android:backgroundTint="@color/colorPrimary" />
 
     </LinearLayout>
