Fixed popup keyboard & other

--- a/DotaMatch/app/src/main/res/layout/activity_chat_room.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_chat_room.xml
@@ -27,6 +27,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:textColor="@color/text"
         android:backgroundTint="@color/colorPrimary"/>
 
     <ListView
