--- a/DotaMatch/app/src/main/res/layout/activity_message.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_message.xml
@@ -10,6 +10,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
+        android:textColor="@color/text"
         android:backgroundTint="@color/colorPrimary"/>
 
     <EditText
