--- a/DotaMatch/app/src/main/res/layout/activity_profile.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_profile.xml
@@ -23,12 +23,12 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Large Text"
-            android:id="@+id/textViewUserEmail"
+            android:id="@+id/textViewUserName"
             android:layout_gravity="center_horizontal" />
 
         <Space
             android:layout_width="wrap_content"
-            android:layout_height="40dp" />
+            android:layout_height="30dp" />
 
         <Button
             android:layout_width="125dp"
