--- a/DotaMatch/app/src/main/res/layout/activity_party.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_party.xml
@@ -314,6 +314,20 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/numberPickerRating"
                     android:layout_weight="1" />
+
+                <TextView
+                    android:text="Player #:"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1" />
+
+                <NumberPicker
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/numberPickerPlayer"
+                    android:layout_weight="1" />
+
             </LinearLayout>
 
             <LinearLayout
@@ -329,6 +343,7 @@
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
                     android:backgroundTint="@color/colorPrimary"
+                    android:textColor="@color/text"
                     android:layout_weight="1" />
 
                 <Button
@@ -337,6 +352,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonSearch"
                     android:backgroundTint="@color/colorPrimary"
+                    android:textColor="@color/text"
                     android:layout_alignParentBottom="true"
                     android:layout_toEndOf="@+id/buttonSaveRating"
                     android:layout_weight="1" />
@@ -347,6 +363,7 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonStart"
                     android:backgroundTint="@color/colorPrimary"
+                    android:textColor="@color/text"
                     android:layout_alignParentBottom="true"
                     android:layout_toEndOf="@+id/buttonSearch"
                     android:layout_weight="1" />
