Added Timer for Game Session

--- a/DotaMatch/app/src/main/res/layout/activity_party.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_party.xml
@@ -128,7 +128,7 @@
                 android:id="@+id/ratingBarUser2"
                 android:layout_below="@+id/textViewUser2"
                 android:layout_alignParentStart="true"
-                android:isIndicator="false" />
+                android:isIndicator="true" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -183,7 +183,7 @@
                 android:id="@+id/ratingBarUser3"
                 android:layout_below="@+id/textViewUser3"
                 android:layout_alignParentStart="true"
-                android:isIndicator="false" />
+                android:isIndicator="true" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -238,7 +238,7 @@
                 android:id="@+id/ratingBarUser4"
                 android:layout_below="@+id/textViewUser4"
                 android:layout_alignParentStart="true"
-                android:isIndicator="false" />
+                android:isIndicator="true" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -294,7 +294,7 @@
                 android:id="@+id/ratingBarUser5"
                 android:layout_below="@+id/textViewUser5"
                 android:layout_alignParentStart="true"
-                android:isIndicator="false" />
+                android:isIndicator="true" />
 
             <LinearLayout
                 android:orientation="horizontal"
@@ -335,8 +335,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <TextView
+                    android:text="Time Remaining:"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:layout_weight="1" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:id="@+id/textViewTimer"
+                    android:layout_weight="2" />
+            </LinearLayout>
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="20dp" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
                 <Button
-                    android:text="Save Rating"
+                    android:text="Submit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/buttonSaveRating"
