--- a/DotaMatch/app/src/main/res/layout/activity_profile.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_profile.xml
@@ -22,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Large Text"
+            android:text=""
             android:id="@+id/textViewUserName"
             android:layout_gravity="center_horizontal" />
 
