--- a/DotaMatch/app/src/main/res/layout/activity_party.xml
+++ b/DotaMatch/app/src/main/res/layout/activity_party.xml
@@ -364,7 +364,7 @@
                     android:text="Submit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/buttonSaveRating"
+                    android:id="@+id/buttonSubmit"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentStart="true"
                     android:backgroundTint="@color/colorPrimary"
